--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "primus": "^7.1.0",
-    "ws": "^3.2.0"
+    "engine.io": "^3.1.1",
+    "engine.io-client": "^3.1.1",
+    "moment": "^2.18.1",
+    "primus": "^7.1.0"
   }
 }
