--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.0",
     "engine.io": "^3.1.1",
     "engine.io-client": "^3.1.1",
     "moment": "^2.18.1",
