--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "engine.io-client": "^3.1.1",
     "moment": "^2.18.1",
     "primus": "^7.1.0",
+    "primus-emit": "^1.0.0",
     "redis": "^2.8.0"
   }
 }
